--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_effective">#2a2a2a</color>
+    <color name="red">#FF0000</color>
+    <color name="graylight">#CDCDCD</color>
+    <color name="startblue">#00C1F1</color>
+    <color name="endblue">#1240E9</color>
+
 </resources>
